# game_of_life_bevy

./: .gitignore  Cargo.toml  README.md
src/: args.rs  config.rs  main.rs  patterns.rs  rules.rs  state.rs  systems.rs
webbuild/: index.html
