[package]
name = "game_of_life_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_embedded_assets = "0.11.0"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
